# termlink

./: .framework.yaml  .gitignore  .mcp.json  .onedev-buildspec.yml  .secret-scan-allowlist  .secret-scan-patterns  .termlink-task  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md  VERSION  install.sh
.agentic-framework/: .fw-not-a-project  .gitignore  .local-patches  .upstream-checksums  FRAMEWORK.md  VERSION  metrics.sh
.agentic-framework/docs/: T-138-inception-findings.md  claude-code-settings.md  consumer-project-setup.md  cycle2-protocol.md  cycle3-protocol.md  deployment-runbook.md  example-github-action-workflow.yml  github-issue-draft.md  observation-analysis.md  onboarding-cycles.md  onboarding-observations.md  rfc-claude-code-governance.md  style-guide.md  task-structure-proposal.md
.agentic-framework/lib/: arc.sh  ask.py  ask.sh  assumption.sh  build.sh  bus.sh  colors.sh  compat.sh  config-file.sh  config.sh  costs.sh  dispatch.sh  dispatch_pause.py  doctor-hook-exercise.py  enums.sh  errors.sh  evolution_log.sh  firewall.sh  first-run.sh  harvest.sh  hook-telemetry.sh  hook-threshold.py  inception.sh  inception_recommendation.sh  init.sh  keylock.sh  mirror.sh  notify.sh  ollama_loop.py  outcome.py  outcome.sh  paths.sh  pause.sh  pause_cli.py  pause_resolve.py  peer.py  pending.sh  pi_worker.py  pickup-channel-bridge.sh  pickup.sh  (+28 more)
.agentic-framework/tests/: handover-push-target.sh
.agentic-framework/web/: app.py  ask.py  config.py  conftest.py  (+14 more)
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.context/: bypass-log.yaml  cron-registry.yaml  settings.yaml
.fabric/: subsystem-rules.yaml  subsystems.yaml  watch-patterns.yaml
.pickup/: 050-cwd-enhancement.md
.playwright-mcp/: page-2026-04-12T17-12-43-886Z.yml
crates/termlink-bus/: Cargo.toml
crates/termlink-bus/src/: artifact_store.rs  claim.rs  envelope.rs  error.rs  lib.rs  log.rs  meta.rs  retention.rs
crates/termlink-cli/: Cargo.toml  build.rs
crates/termlink-cli/src/: cli.rs  config.rs  main.rs  manifest.rs  target.rs  test_env_lock.rs  util.rs
crates/termlink-cli/src/commands/: agent.rs  agent_find_idle.rs  channel.rs  dispatch.rs  events.rs  execution.rs  file.rs  help.rs  identity.rs  infrastructure.rs  metadata.rs  mirror_grid.rs  mirror_grid_composer.rs  mod.rs  pty.rs  push.rs  remote.rs  session.rs  substrate.rs  token.rs  vendor.rs  webhook.rs
crates/termlink-cli/tests/: channel_claim_cli_integration.rs  cli_integration.rs  interactive_integration.rs
crates/termlink-hub/: Cargo.toml  build.rs
crates/termlink-hub/src/: aggregator.rs  artifact.rs  bypass.rs  channel.rs  circuit_breaker.rs  cv_index.rs  dedupe.rs  governor.rs  inbox.rs  lib.rs  pidfile.rs  remote_store.rs  retention_sweeper.rs  route_cache.rs  router.rs  rpc_audit.rs  server.rs  supervisor.rs  template_cache.rs  tls.rs  topic_lint.rs  trust.rs  webhook.rs
crates/termlink-hub/tests/: no_legacy_callers.rs
crates/termlink-mcp/: Cargo.toml  build.rs
crates/termlink-mcp/src/: lib.rs  server.rs  tools.rs
crates/termlink-mcp/tests/: mcp_integration.rs  parity.rs
crates/termlink-protocol/: Cargo.toml
crates/termlink-protocol/src/: control.rs  data.rs  error.rs  events.rs  governance.rs  jsonrpc.rs  lib.rs  transport.rs
crates/termlink-session/: Cargo.toml
crates/termlink-session/examples/: parallel_worker.rs  tofu_test.rs
crates/termlink-session/src/: ack_retry.rs  agent_identity.rs  ansi.rs  artifact.rs  auth.rs  bus_client.rs  claim_client.rs  client.rs  codec.rs  data_server.rs  discovery.rs  endpoint.rs  events.rs  executor.rs  fleet_presence.rs  governance_subscriber.rs  handler.rs  hub_capabilities.rs  identity.rs  inbox_channel.rs  known_peers.rs  lib.rs  lifecycle.rs  liveness.rs  manager.rs  offline_queue.rs  pty.rs  registration.rs  scrollback.rs  server.rs  tofu.rs  transport.rs  ws_consumer.rs
crates/termlink-session/tests/: bus_client_integration.rs  claim_client_integration.rs  integration.rs
crates/termlink-test-utils/: Cargo.toml
crates/termlink-test-utils/src/: lib.rs
docs/: ARCHITECTURE.md  T-1211-settings-patch.md  T-1212-settings-patch.md  T-1213-settings-patch.md  dispatch-collect-convention.md  ssh-tunneling.md
homebrew/: README.md
policy/: value-drivers.yaml
scripts/: T-1884-S1-classify.py  T-1884-S2-dryrun.py  T-1884-S3-cli-watch.py  agent-chat-arc-recent.sh  agent-conversation-list.sh  agent-conversation-selftest.sh  agent-conversation-status.sh  agent-journal.sh  agent-listeners-fleet.sh  agent-listeners.sh  agent-reply.sh  agent-respond.sh  agent-send.sh  be-reachable-pushwaker.sh  be-reachable.sh  bench-pushwake-latency.sh  bench-pushwake-xhost.sh  canary-status.sh  chat-arc-broadcast.sh  chat-arc-multicast.sh  check-canary-aliveness.sh  check-env-var-docs.sh  check-error-code-docs.sh  check-fleet-binary-freshness.sh  check-fleet-capability-freshness.sh  check-fleet-doorbell-mail-health.sh  check-framework-pickup-freshness.sh  check-frozen-husk-freshness.sh  check-mirror-freshness.sh  check-outbox.sh  check-preflight-doc-set-drift.sh  check-stale-waker-code-freshness.sh  check-task-finalization-freshness.sh  check-topic-growth-freshness.sh  check-unconfirmed-delivery-freshness.sh  check-vendored-arc-rollout.sh  check-waker-liveness-freshness.sh  commit-t908-batch.sh  cut-readiness-daily.sh  demo-dm-rail-pushwake.sh  (+89 more)
systemd-templates/: termlink-listener-heartbeat@.service  termlink-substrate-orchestrator@.service  termlink-substrate-worker@.service
tests/: agent-listeners-cv-read.sh  agent-listeners-identity-fp.sh  agent-send-grace-window.sh  agent-send-idle-gate.sh  fleet-capability-canary.sh  relay-b1-doorbell-rail.sh  relay-b2-send-hops.sh  relay-b3-hop-budget.sh  relay-wake-confirm.sh  stale-waker-code-canary.sh  test_g052_inception_decision_gate.sh  test_g054_completion_smoke.sh  test_pl152_counter_arity_static.sh  test_t1619_metrics_trend_smoke.sh  test_t1628_task_verify_flags.sh  test_t1640_pgrep_self_match.sh  test_tl_dispatch_meta.sh  tl-claude-identity-binding.sh  wake-confirm-reply-match.sh  woken-silent-triage.sh
(+12700 files in other folders)
