[workspace]
resolver = "2"
members = [
    "crates/termlink-protocol",
    "crates/termlink-session",
    "crates/termlink-hub",
    "crates/termlink-mcp",
    "crates/termlink-cli",
    "crates/termlink-test-utils",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/DimitriGeelen/termlink"
description = "Cross-terminal session communication — message bus with terminal endpoints"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unique IDs (ULID)
ulid = "1"

# Byte handling
bytes = "1"

# Bit flags
bitflags = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto (capability tokens)
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# TLS (use default aws-lc-rs backend for better performance)
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"

# Platform
libc = "0.2"

# Internal crates
termlink-protocol = { path = "crates/termlink-protocol" }
termlink-session = { path = "crates/termlink-session" }
termlink-hub = { path = "crates/termlink-hub" }
termlink-mcp = { path = "crates/termlink-mcp" }
termlink-test-utils = { path = "crates/termlink-test-utils" }
