[workspace]
resolver = "2"
members = [
    "crates/termlink-protocol",
    "crates/termlink-session",
    "crates/termlink-hub",
    "crates/termlink-mcp",
    "crates/termlink-cli",
    "crates/termlink-test-utils",
    "crates/termlink-bus",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/DimitriGeelen/termlink"
description = "Coordination substrate for parallel AI agents — hub-mediated durable append-log message bus with terminal endpoints"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unique IDs (ULID)
ulid = "1"

# Byte handling
bytes = "1"

# Bit flags
bitflags = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto (capability tokens)
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# TLS (use default aws-lc-rs backend for better performance)
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"

# Outbound HTTP client (arc-004 webhook fan-out, T-2332, descends from T-2331 GO).
# CRYPTO-PROVIDER PIN (T-2333): the hub's TLS stack uses rustls's aws-lc-rs
# backend (see line 54). reqwest's plain `rustls-tls` feature pulls in the RING
# provider via hyper-rustls, so BOTH aws-lc-rs and ring end up compiled — and
# rustls 0.23 then refuses to auto-select a process-default provider, panicking
# ("make sure exactly one of the 'aws-lc-rs' and 'ring' features is enabled") the
# moment any TLS config is built without an explicit provider (broke the tls::
# tests). The `-webpki-roots-no-provider` variant keeps the bundled Mozilla roots
# (portable HTTPS validation, Directive 4 — no OS trust store) WITHOUT enabling
# ring, leaving aws-lc-rs the sole provider so auto-default works again.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider"] }

# WebSocket transport (arc-004 push-transport, T-2305). TLS is already terminated
# by tokio-rustls before the WS layer runs over the decrypted stream, so we take
# tokio-tungstenite WITHOUT its own TLS features — just the RFC6455 handshake +
# frame codec over a generic AsyncRead+AsyncWrite. Avoids a second rustls pin.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = "0.3"

# Regex
regex = "1"

# Platform
libc = "0.2"

# Internal crates
termlink-protocol = { path = "crates/termlink-protocol" }
termlink-session = { path = "crates/termlink-session" }
termlink-hub = { path = "crates/termlink-hub" }
termlink-mcp = { path = "crates/termlink-mcp" }
termlink-test-utils = { path = "crates/termlink-test-utils" }
termlink-bus = { path = "crates/termlink-bus" }

[profile.release]
lto = true
codegen-units = 1
strip = true
