[package]
name = "termlink"
description = "TermLink CLI — cross-terminal session communication"
version.workspace = true
edition.workspace = true

[dependencies]
termlink-protocol = { workspace = true }
termlink-session = { workspace = true }
termlink-hub = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rexpect = "0.5"
