[package]
name = "termlink"
description = "TermLink CLI — cross-terminal session communication"
version.workspace = true
edition.workspace = true

[dependencies]
termlink-protocol = { workspace = true }
termlink-session = { workspace = true }
termlink-hub = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
serde_json = { workspace = true }
libc = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rexpect = "0.5"
termlink-test-utils = { workspace = true }
