[package]
name = "termlink-hub"
description = "TermLink message hub — routes messages between sessions"
version.workspace = true
edition.workspace = true

[dependencies]
termlink-protocol = { workspace = true }
termlink-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

[dev-dependencies]
tempfile = "3"
