[package]
name = "termlink-hub"
description = "TermLink message hub — routes messages between sessions"
version.workspace = true
edition.workspace = true

[dependencies]
termlink-protocol = { workspace = true }
termlink-session = { workspace = true }
termlink-bus = { workspace = true }
ed25519-dalek = "2"
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

[features]
# T-1413: Compile-time switch that flips LEGACY_PRIMITIVES_ENABLED to false.
# Default-off preserves current behavior. Used by CI to test the post-T-1166
# cut path without changing production builds. The actual T-1166 cut can use
# either path: edit the const directly, OR build/run with this feature
# enabled. Both produce identical behavior.
legacy_primitives_disabled = []

[dev-dependencies]
tempfile = "3"
