[package]
name = "termlink-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for TermLink — expose terminal orchestration as structured tools"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
schemars = "1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

libc = { workspace = true }

termlink-session = { workspace = true }
termlink-hub = { workspace = true }

[dev-dependencies]
rmcp = { version = "1.2", features = ["client", "server", "transport-io", "macros", "transport-async-rw"] }
termlink-test-utils = { workspace = true }
tokio = { workspace = true, features = ["full"] }
