[package]
name = "termlink-session"
description = "TermLink session identity, discovery, registration, and lifecycle"
version.workspace = true
edition.workspace = true

[dependencies]
termlink-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
termlink-test-utils = { workspace = true }
